--- a/src/main/webapp/app/entities/team-invitation/team-invitation-inbox.component.html
+++ b/src/main/webapp/app/entities/team-invitation/team-invitation-inbox.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2>
-        <span jhiTranslate="rowadApp.teamInvitation.home.title">Team Invitations</span>
+        <span jhiTranslate="rowadApp.teamInvitation.home.inbox">Team Invitations</span>
     </h2>
     <jhi-alert></jhi-alert>
     <div class="row">
@@ -9,11 +9,11 @@
     <div class="table-responsive" *ngIf="teamInvitations">
         <table class="table table-striped">
             <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="date"><span jhiTranslate="rowadApp.teamInvitation.date">Date</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="status"><span jhiTranslate="rowadApp.teamInvitation.status">Status</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="sender.id"><span jhiTranslate="rowadApp.teamInvitation.sender">Sender</span> <span class="fa fa-sort"></span></th>
-            <th jhiSortBy="team.name"><span jhiTranslate="rowadApp.teamInvitation.team">Team</span> <span class="fa fa-sort"></span></th>
+            <tr>
+            <th><span jhiTranslate="rowadApp.teamInvitation.date">Date</span></th>
+            <th><span jhiTranslate="rowadApp.teamInvitation.status">Status</span></th>
+            <th><span jhiTranslate="rowadApp.teamInvitation.sender">Sender</span></th>
+            <th><span jhiTranslate="rowadApp.teamInvitation.team">Team</span></th>
             <th></th>
             </tr>
             </thead>
@@ -46,13 +46,5 @@
             </tr>
             </tbody>
         </table>
-    </div>
-    <div *ngIf="teamInvitations && teamInvitations.length">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
     </div>
 </div>
