--- a/src/main/webapp/app/home/home-user.component.html
+++ b/src/main/webapp/app/home/home-user.component.html
@@ -1,11 +1,12 @@
 <div class="row justify-content-center">
     <div class="col-md-8">
             <jhi-alert></jhi-alert>
-        <h2 class="display-4" jhiTranslate="home.title">Team</h2>
+        <h2 jhiTranslate="home.user.title">Team</h2>
         <hr/>
         <div *ngIf="hasTeam()">
-            Vous etes membre de l'équipe:
-            link vers l'equipe
+                <span  jhiTranslate="rowadApp.team.home.member">
+                </span>
+                <a [routerLink]="['../team', member.team?.id ]" >{{member.team?.name}}</a>
         </div>
         <div *ngIf="!hasTeam()">
             Vous n'avez pas encore d'équipe
@@ -16,21 +17,19 @@
                 </span>
             </button>
         </div>
-        <h2 class="display-4" jhiTranslate="home.title">Invitations Envoyées</h2>
         <hr/>
         <div *ngIf="hasTeam()">
             <jhi-team-invitation></jhi-team-invitation>
         </div>
-        <h2 class="display-4" jhiTranslate="home.title">Invitations Reçues</h2>
         <hr/>
         <jhi-team-invitation-index></jhi-team-invitation-index>
-        <h2 class="display-4" jhiTranslate="home.title">Quitter l'équipe</h2>
+        <h2 jhiTranslate="home.user.quit">Quitter l'équipe</h2>
         <hr/>
         <div *ngIf="hasTeam()">
                 <button class="btn btn-danger float-right jh-create-entity create-team" (click)="quitTeam()">
                     <span class="fa fa-close"></span>
-                    <span  jhiTranslate="rowadApp.team.home.createLabel">
-                    Create new Team
+                    <span  jhiTranslate="rowadApp.team.home.quit">
+                    Quit team
                     </span>
                 </button>
         </div>
