--- a/src/main/webapp/app/entities/team-invitation/team-invitation-dialog.component.html
+++ b/src/main/webapp/app/entities/team-invitation/team-invitation-dialog.component.html
@@ -30,9 +30,9 @@
             </dl>
         </div>
         <div div class="alert alert-danger" role="alert" [hidden]="!receiverError">
-            <h4>Error</h4>
+            <h4><span jhiTranslate="rowadApp.teamInvitation.error"></span></h4>
             <hr>
-            <p>Le code saisi ne corresponde à aucun client</p>
+            <p><span jhiTranslate="rowadApp.teamInvitation.errorMessage"></span></p>
         </div>
     </div>
     <div class="modal-footer">
